# Stack-Lifecycle-Deployment

./: .dockerignore  .gitignore  1  LICENSE  README.md  ROADMAP.md  error.logs  sld_cli.py
sld-api-backend/: Dockerfile  UV_GUIDE.md  main.py  pyproject.toml  requirements.txt
sld-api-backend/api/v1/: api.py
sld-api-backend/api_v1/: api.py
sld-api-backend/api_v1/endpoints/: activity_logs.py  auth.py  aws.py  azure.py  deploy.py  fe.py  gcp.py  healthy.py  master_deploy.py  master_user.py  plan.py  schedule.py  stacks.py  tasks.py  users.py  variables.py
sld-api-backend/config/: api.py  celery_config.py  database.py  logger.conf
sld-api-backend/core/: provider.py
sld-api-backend/core/providers/: sld.py  terraform.py
sld-api-backend/core/providers/hashicorp/: actions.py  artifact.py  download.py  templates.py
sld-api-backend/crud/: activityLogs.py  aws.py  azure.py  deploys.py  fe.py  gcp.py  master.py  stacks.py  tasks.py  user.py
sld-api-backend/db/: models.py
sld-api-backend/helpers/: folders.py  get_data.py  metrics.py  push_task.py  schedule.py
sld-api-backend/schemas/: schemas.py
sld-api-backend/security/: deps.py  providers_credentials.py  tokens.py  validator.py  vault.py
sld-api-backend/src/activityLogs/api/container/: get.py
sld-api-backend/src/activityLogs/api/v1/: activity_logs.py
sld-api-backend/src/activityLogs/crud/: activityLogs.py
sld-api-backend/src/activityLogs/domain/entities/: activity.py
sld-api-backend/src/activityLogs/infrastructure/: models.py  repositories.py
sld-api-backend/src/aws/api/container/: create.py  delete.py  get.py  update.py
sld-api-backend/src/aws/api/v1/: aws.py
sld-api-backend/src/aws/crud/: aws.py
sld-api-backend/src/aws/domain/entities/: aws.py
sld-api-backend/src/aws/infrastructure/: models.py  repositories.py
sld-api-backend/src/aws/schema/: aws.py
sld-api-backend/src/azure/api/container/: create.py  delete.py  get.py  update.py
sld-api-backend/src/azure/api/v1/: azure.py
sld-api-backend/src/azure/crud/: azure.py
sld-api-backend/src/azure/domain/entities/: azure.py
sld-api-backend/src/azure/infrastructure/: models.py  repositories.py
sld-api-backend/src/azure/schema/: azure.py
sld-api-backend/src/custom_providers/api/container/: create.py  delete.py  get.py
sld-api-backend/src/custom_providers/api/v1/: custom_providers.py
sld-api-backend/src/custom_providers/domain/entities/: custom_providers.py
sld-api-backend/src/custom_providers/infrastructure/: models.py  repositories.py
sld-api-backend/src/deploy/api/v1/: deploy.py  plan.py  schedule.py
sld-api-backend/src/deploy/crud/: deploys.py
sld-api-backend/src/deploy/infrastructure/: models.py  repositories.py
sld-api-backend/src/gcp/crud/: gcp.py
sld-api-backend/src/gcp/infrastructure/: models.py  repositories.py
sld-api-backend/src/shared/helpers/: get_data.py  push_task.py
sld-api-backend/src/shared/infrastructure/: respository.py
sld-api-backend/src/shared/security/: deps.py  vault.py
sld-api-backend/src/stacks/crud/: stacks.py
sld-api-backend/src/stacks/db/: models.py
sld-api-backend/src/stacks/infrastructure/: models.py  repositories.py
sld-api-backend/src/tasks/crud/: tasks.py
sld-api-backend/src/tasks/infrastructure/: models.py  repositories.py
sld-api-backend/src/users/application/: tokens.py  validator.py
sld-api-backend/src/users/crud/: user.py
sld-api-backend/src/users/infrastructure/: models.py  repositories.py
sld-api-backend/src/worker/: provider.py
sld-api-backend/src/worker/helpers/: hcl2_to_json.py
sld-api-backend/src/worker/security/: providers_credentials.py
sld-api-backend/src/worker/tasks/: terraform_worker.py
sld-api-backend/tasks/: celery_worker.py  terraform_worker.py
sld-api-backend/test/: test_00_user_init.py  test_01_crud_users.py  test_02_crud_stacks.py  test_03_get_variables.py  test_04_crud_cloudAccounts.py  test_05_crud_deploy.py
sld-api-backend/test/config/: api.py
sld-api-backend/test/helpers/: api_request.py  api_token.py
sld-dashboard/: .dockerignore  .env  .gitignore  Dockerfile  UV_GUIDE.md  config.py  gunicorn-cfg.py  pyproject.toml  requirements.txt  run.py
sld-dashboard/app/: __init__.py
sld-dashboard/app/base/: __init__.py  forms.py  models.py  routes.py  util.py_delete
sld-dashboard/app/helpers/: api_request.py  api_token.py  converter.py  parsers.py  security.py
sld-dashboard/app/helpers/config/: api.py
sld-dashboard/app/home/: __init__.py  deploy.py  forms.py  routes.py
sld-dashboard/app/home/templates/: activity-logs.html  aws-edit.html  aws-list.html  aws-new.html  azure-edit.html  azure-list.html  azure-new.html  custom-provider-list.html  custom-provider-new.html  dashboard.html  deploy-clone.html  deploy-edit.html  deploy-plan.html  deploy-stream.html  deploys-list.html  fe-list.html  fe-new.html  gcp-edit.html  gcp-list.html  gcp-new.html  index.html  page-403.html  page-500.html  schedule-edit.html  stack-details.html  stack-edit.html  stacks-cards.html  stacks-deploy.html  stacks-list.html  stacks-new.html  tasks-logs.html  tasks-output.html  user-setting.html  users-edit.html  users-list.html  users-new.html
sld-remote-state/: .dockerignore  Dockerfile  UV_GUIDE.md  main.py  provider_example.tf  pyproject.toml  requirements.txt
sld-remote-state/.remote_states/: aws_vpc-squad1-develop-aws_vpc_darth_vader  aws_vpc-squad1-develop-aws_vpc_stormtrooper  aws_vpc-squad1-develop-aws_vpc_yoda  aws_vpc-squad1-develop-poc01  aws_vpc09-squad1-develop-pppp
sld-remote-state/configs/: azure_blob_storage.py  bucket_s3.py  gcp_cloud_storage.py  mongo_db.py  storage.py  store.py
sld-remote-state/helpers/: azure_blob_storage.py  bucket_s3.py
sld-remote-state/storage/: azure.py  gcp.py  local.py  mongodb.py  s3.py  state.py
sld-remote-state/stores/: azure_blob_storage.py  bucket_s3.py  gcp_cloud_storage.py  local.py  mongo_db.py
sld-schedule/: Dockerfile  UV_GUIDE.md  main.py  pyproject.toml  requirements.txt
sld-schedule/config/: api.py
sld-schedule/helpers/: api_request.py  api_token.py  get_deploy_schedule.py
(+161 files in other folders)
