[project]
name = "sld-api-backend"
version = "3.6.3"
description = "Stack Lifecycle Deployment API Backend"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "D10S0VSkY" }
]
keywords = ["terraform", "ansible", "cloud", "deployment", "lifecycle"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "bcrypt==4.0.1",
    "boto3==1.35.80",
    "celery==5.5.3",
    "click==8.1.8",
    "cryptography==46.0.2",
    "dependency-injector==4.43.0",
    "email-validator==2.2.0",
    "fastapi==0.118.0",
    "Jinja2==3.1.4",
    "mysqlclient==2.2.6",
    "passlib[bcrypt]==1.7.4",
    "password-strength==0.0.3.post2",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "pyhcl==0.4.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-hcl2==7.3.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.20",
    "PyYAML==6.0.2",
    "redis==6.4.0",
    "requests==2.32.3",
    "SQLAlchemy==2.0.36",
    "uvicorn==0.37.0",
    "croniter==6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov",
    "pytest-asyncio",
    "black",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_missing_imports = true
