[project]
name = "sld-dashboard"
version = "3.6.3"
description = "Stack Lifecycle Deployment Dashboard"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "D10S0VSkY" }
]
keywords = ["terraform", "ansible", "cloud", "deployment", "lifecycle", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "bcrypt==4.2.1",
    "cryptography==46.0.2",
    "email-validator==2.2.0",
    "Flask==3.1.0",
    "Flask-Login==0.6.3",
    "Flask-Migrate==4.0.7",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-WTF==1.2.2",
    "gevent==25.9.1",
    "gunicorn==23.0.0",
    "Jinja2==3.1.4",
    "mistletoe==1.4.0",
    "mysqlclient==2.2.6",
    "passlib[bcrypt]==1.7.4",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "python-decouple==3.8",
    "redis==6.4.0",
    "requests==2.32.3",
    "SQLAlchemy==2.0.36",
    "WTForms==3.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_missing_imports = true
