[project]
name = "sld-schedule"
version = "2.7.0"
description = "Stack Lifecycle Deployment Schedule Service"
requires-python = ">=3.11"
license = { text = "GPL-3.0" }
authors = [
    { name = "D10S0VSkY" }
]
keywords = ["terraform", "ansible", "cloud", "deployment", "lifecycle", "scheduler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "APScheduler==3.10.4",
    "fastapi==0.118.0",
    "jmespath==1.0.1",
    "mysqlclient==2.2.6",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "requests==2.32.3",
    "retrying==1.3.4",
    "SQLAlchemy==2.0.36",
    "uvicorn==0.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_missing_imports = true
